<resources>

    <string name="app_name">BankersDaily</string>
    <string name="base_url">http://bankersdaily.in/</string>
    <string name="host_url">bankersdaily.in</string>
    <string name="testpress_base_url">http://bankersdaily.testpress.in/</string>
    <string name="testpress_host_url">bankersdaily.testpress.in</string>

    <string name="facebook_app_id">150335602362077</string>
    <string name="fb_login_protocol_scheme">fb150335602362077</string>

    <string name="server_client_id">1009448989316-mlvv7gs6v4e8hf35torod6tqe7v66po3.apps.googleusercontent.com</string>

    <string name="google_sign_in_wrong_hash">Google sign in error, please contact the administrator to check key hashes.</string>

    <string name="network_error">Network Error</string>
    <string name="no_internet_try_again">Please check your internet connection &amp; try again.</string>
    <string name="tap_to_retry">Tap to retry</string>

    <string name="loading_failed">Loading Failed</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="please_login">Please login to see this exams</string>
    <string name="try_after_sometime">Please try after sometime</string>
    <string name="some_thing_went_wrong_try_again">Some thing went wrong, please try again later.</string>

    <string name="post_not_available">Article not available</string>
    <string name="post_not_available_description">This article is no longer available or not published yet.</string>

    <string name="category_not_available">Category not available</string>
    <string name="category_not_available_description">This category is no longer available or not published yet.</string>

    <string name="loading">Loading…</string>

    <string name="ok">OK</string>

    <string name="article">Article</string>
    <string name="articles">Articles</string>
    <string name="invalid_post">Invalid Article</string>
    <string name="no_posts">No Articles</string>
    <string name="no_posts_description">There are no articles right now.</string>

    <string name="no_bookmarks">No Articles Bookmarked!</string>
    <string name="no_bookmarks_description">Your bookmarked articles will appear here.</string>

    <string name="bookmark">Bookmark</string>
    <string name="unbookmark">Unbookmark</string>

    <string name="new_posts_available">\u21BB New Posts Available</string>

    <string name="home">Home</string>
    <string name="latest">Latest</string>
    <string name="categories">Categories</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="store">Store</string>
    <string name="bookmarked_questions">Bookmarked Questions</string>

    <string name="feedback">Feedback</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="rate_us">Rate Us</string>
    <string name="request_feature">Suggest a feature</string>
    <string name="logout">Logout</string>

    <string name="logout_alert">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Close</string>

    <string name="share_message">Check out this App. I found it useful for Banking preparation https://play.google.com/store/apps/details?id=</string>
    <string name="press_again_to_exit">Please again to exit</string>

    <string name="latest_articles">Latest Articles</string>
    <string name="bookmarked_articles">Bookmarked Articles</string>

    <string name="no_categories">No Categories</string>
    <string name="no_categories_description">There are no categories right now.</string>

    <string name="share">Share</string>

    <string name="not_supported">Not supported</string>
    <string name="wrong_url">Url is Incorrect / Not supported.</string>
    <string name="browser_not_available">You need a browser app to this action.</string>

    <string name="search">Search</string>
    <string name="facebook_login_error">Facebook sign in error, please check the key hashes</string>

    <string name="today_quiz">Today\'s Quiz</string>
    <string name="start_quiz">Start Quiz</string>

    <string name="email_cannot_retrieve">Need access to retrieve Email from your account</string>

    <string name="top">Top</string>
    <string name="bottom">Bottom</string>

    <string name="daily_current_affairs">Daily Current Affairs</string>
    <string name="current_affairs_quiz">Current Affairs Quiz</string>
    <string name="notification">Notification</string>

    <string name="testpress_courses">Learn</string>
    <string name="testpress_no_courses_description">Buy any course from store if available or check back later?</string>

    <string name="testpress_goto_home">Learn</string>

</resources>
