<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home_black_24dp"
            android:checked="true"
            android:title="@string/home" />

        <item
            android:id="@+id/courses"
            android:icon="@drawable/ic_learn"
            android:title="@string/testpress_courses" />

        <item
            android:id="@+id/exams"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="@string/testpress_exams" />

        <item
            android:id="@+id/bookmarked_questions"
            android:icon="@drawable/ic_bookmarked"
            android:title="@string/bookmarked_questions" />

        <item
            android:id="@+id/leaderboard"
            android:icon="@drawable/leaderboard"
            android:title="@string/testpress_leaderboard" />

        <item
            android:id="@+id/store"
            android:icon="@drawable/ic_store_black_24dp"
            android:title="@string/store" />

        <item
            android:id="@+id/feedback"
            android:icon="@drawable/ic_feedback_black_24dp"
            android:title="@string/feedback" />

        <item
            android:id="@+id/request_feature"
            android:icon="@drawable/ic_help_outline_black_24dp"
            android:title="@string/request_feature" />

        <item
            android:id="@+id/rate_us"
            android:icon="@drawable/ic_favorite_border_black_24dp"
            android:title="@string/rate_us" />

        <item
            android:id="@+id/share"
            android:icon="@drawable/ic_share_black_24dp"
            android:title="@string/share" />

        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_power_settings_new_black_24dp"
            android:title="@string/logout" />

    </group>

    <group android:enabled="false" android:checkableBehavior="none">

        <item
            android:id="@+id/app_version"
            android:title="V1.0.10" />

    </group>

</menu>